--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ensalamento</title>
   <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
-  <p>teste</p>
+  <h1>teste</h1>
+  <p>outro teste</p>
 </body>
+
 </html>
